--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="twitter_consumer_key">cn4Rafl8pj03P7SQCnlEYXktY</string>
+    <string name="twitter_consumer_secret">38SGyrGg85Fbxlmg3IunAqA3Wj0MfhVBIvYBfEsFx7UCCym7Fi</string>
 </resources>
