facebookボタン表示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- Twitter -->
     <string name="twitter_consumer_key">cn4Rafl8pj03P7SQCnlEYXktY</string>
     <string name="twitter_consumer_secret">38SGyrGg85Fbxlmg3IunAqA3Wj0MfhVBIvYBfEsFx7UCCym7Fi</string>
     <string name="twitter_callback_url">flex://twitter</string>
+
+    <!-- Facebook -->
+    <string name="facebook_app_id">119801705385640</string>
 </resources>
